--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
                     box-sizing: border-box;
                }
                body {
-                     width: 1200px;
-                     margin: auto; 
+                     
+                     /* margin: auto;  */
                      background-color: #E0C3FC ;
                     /* background-image: linear-gradient(90deg, #8EC5FC 30%, #E0C3FC 90%); */
                }
                section {
-                    width: 500px;
+                    width: 400px;
                     margin: auto;
                }
                .watch {
                     
-                    width: 300px;
+                    width:300px;
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    text-align: center;
+                    /* text-align: center; */
                     background-color: #fff;
                     border-radius: 10px;
                     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -58,7 +58,6 @@
                     margin: auto;
                }
                .btn {
-                    border: 1px solid rebeccapurple;
                     text-align: center;
                     margin-top: 10px;
                }
