--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                               <button onclick="start()">Start</button>
                               <button id="stop" onclick="stop()">Stop</button>
                               <button id="stop" onclick="reset()">Reset</button>
+                              <!-- <p id="input">00</p>
+                              <button id="stop">stop</button>
+                              <button id="start">start</button> -->
                          </div>
                     </div>
                </div>
